@@ -171,7 +171,7 @@ class WFST {
         
     //     newPerplexity = train_estimate();
     //	lastChange = train_maximize(method);
-    Weight train_estimate(bool delete_bad_training=true); // accumulates counts, returns perplexity of training set = 2^(- avg log likelihood) = 1/(Nth root of product of model probabilities of N-weight training examples)  - optionally deletes training examples that have no accepting path
+    Weight train_estimate(Weight &unweighted_corpus_prob,bool delete_bad_training=true); // accumulates counts, returns perplexity of training set = 2^(- avg log likelihood) = 1/(Nth root of product of model probabilities of N-weight training examples)  - optionally deletes training examples that have no accepting path
     Weight train_maximize(NormalizeMethod const& method,FLOAT_TYPE delta_scale=1); // normalize then exaggerate (then normalize again), returning maximum change
     WFST(const WFST &a) { throw std::runtime_error("No copying of WFSTs allowed!"); }
  public:
